--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.11.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
+    "formik": "^2.4.9",
     "next": "16.1.4",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
